# haskell-book

./: LICENSE  README.md  notes.md
ch10/: DatabaseProcessing.hs  exercises.hs
ch11/: exercises.hs
ch12/: exercises.hs
ch13/: Cipher.hs  exercises.hs
ch13/hangman/: hangman.cabal
ch13/hangman/data/: dict.txt
ch13/hangman/src/: Main.hs
ch14/addition/: Addition.hs  addition.cabal
ch14/morse/: morse.cabal  package.yaml
ch14/morse/src/: Main.hs  Morse.hs
ch15/: exercises.hs
ch16/: exercises.hs
ch17/: BadMonoid.hs  ListApplicative.hs  exercises.hs
ch18/: exercises.hs
ch2/: exercises.hs
ch20/: exercises.hs
ch21/: exercises.hs
ch3/: exercises.hs
ch4/: exercises.hs
ch5/: exercises.hs
ch6/: exercises.hs
ch7/: exercises.hs
ch8/: exercises.hs
ch9/: cipher.hs  exercises.hs
